# Life

./: .clang-format  .clang-tidy  CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake
include/: blinky.hpp  board.hpp  clyde.hpp  constants.hpp  direction.hpp  entity.hpp  fruit.hpp  game.hpp  ghost.hpp  inky.hpp  math.hpp  pacman.hpp  pinky.hpp  timer.hpp
src/: board.cpp  entity.cpp  fruit.cpp  game.cpp  ghost.cpp  pacman.cpp  timer.cpp
